--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
   "name": "billing_itg_core",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
+  "main": "jest.config.js",
+  "mode": "development",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack --config webpack.config.js"
   },
   "devDependencies": {
     "file-system": "^2.2.2",
     "jest": "^23.4.1",
     "pending-xhr-puppeteer": "^1.0.13",
     "puppeteer": "^1.6.1",
-    "webpack": "^4.18.0"
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0"
   },
-  "main": "jest.config.js",
   "dependencies": {},
-  "author": "",
+  "author": "paras.vora",
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/parasvora/fusion_itg_test.git"
+    "url": "git+https://github.com/parasvora/billing-core.git"
   },
   "bugs": {
-    "url": "https://github.com/parasvora/fusion_itg_test/issues"
+    "url": "https://github.com/parasvora/billing-core/issues"
   },
-  "homepage": "https://github.com/parasvora/fusion_itg_test#readme",
+  "homepage": "https://github.com/parasvora/billing-core#readme",
   "description": ""
 }
