--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "billing_itg_core",
   "version": "0.0.11",
   "private": false,
+  "main": "index.js",
   "mode": "development",
   "scripts": {
     "test": "jest"
